/*
MIT License
Copyright(c) 2022 Futurewei Cloud
    Permission is hereby granted,
    free of charge, to any person obtaining a copy of this software and associated documentation files(the "Software"), to deal in the Software without restriction,
    including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and / or sell copies of the Software, and to permit persons
    to whom the Software is furnished to do so, subject to the following conditions:
    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/
syntax="proto3";
package ntest;
option go_package = "github.com/futurewei-cloud/merak/api/proto/v1/ntest;ntest";
import "common.proto";

service MeraknTestService {
    rpc TestHandler (InternalTestConfiguration) returns (ReturnTestMessage) {}
}

enum TestStatus {
  NONE = 0;
  RUNNING = 1;
  PASSED = 2;
  FAILED = 3;
}

enum TestType {
  PINGALL = 0;
}

message InternalTestConfiguration {
    TestType test_type = 1;
}

message InternalTestInfo {
    string id = 1;
    TestType test_type = 2;
    repeated InternalVMHost hosts = 3;
}

message InternalVMHost {
    string name = 1;
    string ip = 2;
    repeated InternalVMTestInfo vms = 3;
}

message InternalVMTestInfo {
    string name = 1;
    string id = 2;
    string ip = 3;
    TestStatus results = 4;
}


message ReturnTestMessage {
    common.ReturnCode return_code = 1;
    string return_message = 2;
    InternalTestInfo results = 3;
}
